--- a/main.html
+++ b/main.html
@@ -2,61 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Essence Vault</title>
     <link rel="stylesheet" href="main.css">
-    <title>Company name</title>
-    <body>
-    <header>
-        <nav>
-            <div class="logo">
-                <h1>Company name</h1>
-            </div>
-            <ul class="nav-links">
-                <li><a href="#1">Home</a></li>
-                <li><a href="#2">Our Products</a></li>
-                <li><a href="#3">Products list</a></li>
-                <li><a href="#4">About Us</a></li>
-                <li><a href="#5">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="nav-links">
-            <h1><a id="1">Welcome to our fragrance company</a></h1>
-            <p>Discover our exquisite collection of fragrances that captivate your senses.</p>
-        </section>
-        <section class="nav-links">
-            <h1><a id="2">Our Products</a></h1>
-            <p>Explore our range of fragrances, each crafted with care and passion to provide a unique olfactory experience.</p>
-        </section>
-        <section class="nav-links">
-            <h1><a id="3">Products list</a></h1>
-            <ul>
-                <li>Fragrance 1: A blend of floral and citrus notes.</li>
-                <li>Fragrance 2: A warm and spicy scent with hints of vanilla.</li>
-                <li>Fragrance 3: A fresh and invigorating fragrance with aquatic undertones.</li>
-            </ul>
-        </section>
-        <section class="nav-links">
-            <h1><a id="4">About Us</a></h1>
-            <p>Our fragrance company is dedicated to creating high-quality scents that evoke emotions and memories. With a passion for perfumery, we strive to bring you unique and captivating fragrances that enhance your everyday life.</p>
-        </section>
-        <section class="nav-links">
-            <h1><a id="5">Contact</a></h1>
-            <p>For inquiries, please contact us at:</p>
-            <ul>
-                <li>Email: info@companyname.com</li>
-                <li>Phone: +1 (123) 456-7890</li>
-                <li>Address: 123 Fragrance Street, City, Country</li>
-            </ul>
-        </section>
-        <section class="nav-links">
-            <h1>Follow us on social media</h1>
-            <ul>
-                <li><a href="https://www.facebook.com/companyname">Facebook</a></li>
-                <li><a href="https://www.instagram.com/companyname">Instagram</a></li>
-            </ul>
-    </main>
 </head>
+
+<body>
+
+<header>
+    <nav>
+        <div class="logo">
+            <h1>Essence Vault</h1>
+        </div>
+        <ul class="nav-links">
+            <li><a href="main.html">Home</a></li>
+            <li><a href="#products">Our Products</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main>
+
+<section class="hero">
+    <h2>Welcome to Our Fragrance Website</h2>
+    <p>Discover scents that define your personality.</p>
+</section>
+
+<section id="products" class="products">
+    <h2>Our Products</h2>
+
+    <div class="product-container">
+
+        <div class="product-card">
+            <a href="hawas-ice.html">
+                <img src="images/hawas_ice0.jpg" alt="Hawas Ice">
+                <h3>Hawas Ice</h3>
+            </a>
+        </div>
+
+        <div class="product-card">
+            <a href="hawas-fire.html">
+                <img src="images/hawas_fire0.jpg" alt="Hawas Fire">
+                <h3>Hawas Fire</h3>
+            </a>
+        </div>
+
+        <div class="product-card">
+            <a href="hawas-elixir.html">
+                <img src="images/hawas_elixir0.jpg" alt="Hawas Elixir">
+                <h3>Hawas Elixir</h3>
+            </a>
+        </div>
+
+        <div class="product-card">
+            <a href="hawas-diva.html">
+                <img src="images/hawas_diva1.png" alt="Hawas Diva">
+                <h3>Hawas Diva</h3>
+            </a>
+        </div>
+
+    </div>
+</section>
+
+<section id="about">
+    <h2>About Us</h2>
+    <p>We are passionate about creating high-quality fragrances that leave a lasting impression.</p>
+</section>
+
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Email: info@essencevault.com</p>
+</section>
+
+</main>
+
+<footer>
+    <p>&copy; 2026 Essence Vault</p>
+</footer>
+
+</body>
 </html>
